--- a/home/home.css
+++ b/home/home.css
@@ -105,3 +105,13 @@ p {
     line-height: 110%;
     letter-spacing: -3.03px;
 }
+
+
+.production {
+
+}
+
+.swiper {
+    width: 600px;
+    height: 300px;
+}
