--- a/navigation/navigation.css
+++ b/navigation/navigation.css
@@ -12,6 +12,13 @@ a {
     color: unset;
 }
 
+li:first-child {
+    padding-right: 20px;
+}
+li:nth-last-child(2) {
+    padding-left: 20px;
+}
+
 .container-width {
     max-width: 1180px;
     margin: auto;
@@ -59,6 +66,7 @@ a {
     font-size: 14px;
     line-height: 140%;
     align-items: center;
+    z-index: 9;
 }
 
 .item_link:hover {
@@ -80,25 +88,44 @@ a {
 .navbar_dropdown {
     display: none;
     position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.navbar_items-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     border-radius: 20px;
     background: #FFF;
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
-    top: 45px;
-    left: -22px;
+    margin-top: 45px;
+    margin-left: -18px;
     padding: 20px 36px 20px 20px;
-    flex-direction: column;
     gap: 6px;
+    min-width: 170px;
     max-height: 172px;
-    flex-wrap: wrap;
     width: max-content;
 }
 
 .navbar_dropdown:hover {
-    display: flex;
+    display: block;
 }
 
 .button-toggle:hover >.navbar_dropdown {
-    display: flex;
+    display: block;
+}
+
+.button-toggle:hover .link-toggle {
+    color: #000;
+}
+
+.button-toggle:hover .link-toggle:after {
+    display: block;
+    content: '';
+    width: 8px;
+    height: 5px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='4' viewBox='0 0 10 4' fill='none'%3E%3Cpath d='M9 0.5L5 3.5L1 0.5' stroke='black' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
 
 .dropdown_link {
@@ -129,7 +156,7 @@ a {
 }
 
 .order-call:hover {
-    padding: 12px 14px 12px 15px;
+    padding: 12px 24px 12px 25px;
 }
 
 .link-orange {
@@ -137,8 +164,4 @@ a {
     font-size: 14px;
     font-weight: 500;
     line-height: 140%;
-}
-
-.link-orange:hover {
-    color: #000;
 }
