--- a/navigation/navigation.css
+++ b/navigation/navigation.css
@@ -28,6 +28,7 @@ li:nth-last-child(2) {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 40px;
 }
 
 .navbar_wrapper-items {
