--- a/navigation/navigation.css
+++ b/navigation/navigation.css
@@ -12,10 +12,10 @@ a {
     color: unset;
 }
 
-li:first-child {
+li.navbar_item:first-child {
     padding-right: 20px;
 }
-li:nth-last-child(2) {
+li.navbar_item:nth-last-child(2) {
     padding-left: 20px;
 }
 
@@ -77,8 +77,8 @@ li:nth-last-child(2) {
 .link-toggle:after {
     display: flex;
     content: '';
-    width: 8px;
-    height: 5px;
+    width: 10px;
+    height: 4px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='4' viewBox='0 0 10 4' fill='none'%3E%3Cpath d='M9 0.5L5 3.5L1 0.5' stroke='%23808080' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
 
@@ -91,6 +91,7 @@ li:nth-last-child(2) {
     position: absolute;
     top: 0;
     width: 100%;
+    z-index: 999;
 }
 
 .navbar_items-wrapper {
@@ -124,8 +125,8 @@ li:nth-last-child(2) {
 .button-toggle:hover .link-toggle:after {
     display: block;
     content: '';
-    width: 8px;
-    height: 5px;
+    width: 10px;
+    height: 4px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='4' viewBox='0 0 10 4' fill='none'%3E%3Cpath d='M9 0.5L5 3.5L1 0.5' stroke='black' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
 
