--- a/t-shirt_printing/t-shirt_printing.css
+++ b/t-shirt_printing/t-shirt_printing.css
@@ -1,274 +1,3 @@
-body {
-    font-family: Manrope;
-    background: #F3F3F8;
-}
-
-p, ul {
-    margin: 0;
-}
-
-a {
-    text-decoration: unset;
-    color: unset;
-}
-
-
-.container-width {
-    max-width: 1180px;
-    margin: auto;
-}
-
-
-.order-product {
-    display: flex;
-    gap: 30px;
-}
-
-.order-product_swiper-wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.order-product_swiper {
-    max-width: 575px;
-    max-height: 553px;
-    position: relative;
-}
-
-.order-product_swiper_img {
-    width: 100%;
-    border-radius: 30px;
-}
-
-.order-product_swiper-buttons {
-    display: block;
-    content: '';
-    width: 46px;
-    height: 46px;
-    position: absolute;
-    top: 257px;
-    z-index: 9;
-    cursor: pointer;
-}
-
-.order-product_swiper-button-prev {
-    left: 10px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='46' height='46' viewBox='0 0 46 46' fill='none'%3E%3Ccircle cx='23' cy='23' r='23' transform='matrix(1 0 0 -1 0 46)' fill='white'/%3E%3Cpath d='M25 31L18 23L25 15' stroke='%23CBCBDA' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-.order-product_swiper-button-prev:hover {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='46' height='46' viewBox='0 0 46 46' fill='none'%3E%3Ccircle cx='23' cy='23' r='23' transform='matrix(1 0 0 -1 0 46)' fill='white'/%3E%3Cpath d='M25 31L18 23L25 15' stroke='%2386869A' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-.order-product_swiper-button-next {
-    right: 10px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='46' height='46' viewBox='0 0 46 46' fill='none'%3E%3Ccircle cx='23' cy='23' r='23' transform='matrix(-1 8.74228e-08 8.74228e-08 1 46 0)' fill='white'/%3E%3Cpath d='M21 15L28 23L21 31' stroke='%23CBCBDA' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-.order-product_swiper-button-next:hover {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='46' height='46' viewBox='0 0 46 46' fill='none'%3E%3Ccircle cx='23' cy='23' r='23' transform='matrix(-1 8.74228e-08 8.74228e-08 1 46 0)' fill='white'/%3E%3Cpath d='M21 15L28 23L21 31' stroke='%2386869A' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-.order-product_swiper-thumbnail {
-    max-width: 575px;
-    max-height: 136px;
-    cursor: pointer;
-}
-
-.order-product_swiper-thumbnail_img {
-    max-width: 137px;
-    height: 136px;
-    width: 100%;
-    border-radius: 30px;
-}
-
-.order-product-description {
-    max-width: 575px;
-}
-
-.order-product_header {
-    font-size: 52px;
-    font-weight: 500;
-    line-height: 120%;
-    margin-top: -13px;
-}
-
-.order-product_params {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 30px;
-}
-
-.product_params_title {
-    display: flex;
-    flex-direction: column;
-    white-space: nowrap;
-    gap: 6px;
-    color: #A9A9C1;
-    font-size: 16px;
-    line-height: 140%;
-    width: 100%;
-    max-width: 272px;
-}
-
-.product_params_select-wrapper {
-    display: flex;
-    align-items: center;
-}
-
-.product_params_select-wrapper:after {
-    content: '';
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='6' viewBox='0 0 12 6' fill='none'%3E%3Cpath d='M1 1L6 5L11 1' stroke='%2386869A' stroke-linecap='round'/%3E%3C/svg%3E");
-    width: 10px;
-    height: 6px;
-    margin-left: -23px;
-    z-index: 9;
-}
-
-.product_params-inputs {
-    display: flex;
-    border-radius: 30px;
-    background: #FFF;
-    border: none;
-    padding: 9px 13px;
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    width: 100%;
-    cursor: pointer;
-}
-
-.product_params-options {
-    /*display: contents;*/
-    /*width: 100%;*/
-    max-width: 272px;
-    border: none;
-}
-
-.params_checkbox_item {
-    display: none;
-    align-items: center;
-    gap: 8px;
-    font-size: 16px;
-    line-height: 140%;
-    cursor: pointer;
-}
-
-.params_checkbox-active {
-    display: flex;
-}
-
-.params_checkbox_item:before {
-    display: block;
-    content: '';
-    width: 34px;
-    height: 34px;
-}
-
-.params_checkbox_item[data-params_checkbox_item-without]:before {
-    background-image: url("data:image/svg+xml,%3Csvg width='34' height='34' viewBox='0 0 34 34' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='17' cy='17' r='17' fill='white'/%3E%3Crect width='2' height='17.5988' rx='1' transform='matrix(-0.707109 0.707105 -0.707109 -0.707105 23.9998 22.4443)' fill='%2386869A'/%3E%3Crect width='2' height='17.5988' rx='1' transform='matrix(0.707109 0.707105 -0.707109 0.707105 22.4446 10)' fill='%2386869A'/%3E%3C/svg%3E%0A");
-}
-
-.params_checkbox_item[data-params_checkbox_item-without]:hover:before {
-    background-image: url("data:image/svg+xml,%3Csvg width='34' height='34' viewBox='0 0 34 34' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='17' cy='17' r='17' fill='white'/%3E%3Crect width='2' height='17.5988' rx='1' transform='matrix(-0.707109 0.707105 -0.707109 -0.707105 23.9998 22.4443)' fill='black'/%3E%3Crect width='2' height='17.5988' rx='1' transform='matrix(0.707109 0.707105 -0.707109 0.707105 22.4446 10)' fill='black'/%3E%3C/svg%3E%0A");
-}
-
-.params_checkbox_item[data-params_checkbox_item-with]:before {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='34' height='34' viewBox='0 0 34 34' fill='none'%3E%3Ccircle cx='17' cy='17' r='17' fill='white'/%3E%3Crect width='2.18008' height='8.63899' rx='1.09004' transform='matrix(-0.702875 0.711314 -0.702875 -0.711314 16.1943 22.4492)' fill='%2386869A'/%3E%3Crect width='2.18008' height='15.8905' rx='1.09004' transform='matrix(-0.702875 -0.711314 0.702874 -0.711314 14.7393 23.958)' fill='%2386869A'/%3E%3C/svg%3E");
-
-}
-
-.params_checkbox_item[data-params_checkbox_item-with]:hover:before {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='34' height='34' viewBox='0 0 34 34' fill='none'%3E%3Ccircle cx='17' cy='17' r='17' fill='white'/%3E%3Crect width='2.18008' height='8.63899' rx='1.09004' transform='matrix(-0.702875 0.711314 -0.702875 -0.711314 16.1943 22.4492)' fill='black'/%3E%3Crect width='2.18008' height='15.8905' rx='1.09004' transform='matrix(-0.702875 -0.711314 0.702874 -0.711314 14.7393 23.958)' fill='black'/%3E%3C/svg%3E");
-}
-
-.params_checkbox_item-text {
-    width: 100%;
-    max-width: 200px;
-    padding: 6px 14px;
-    border-radius: 30px;
-    background: #FFF;
-    color: #000;
-}
-
-.order-product_pips {
-
-}
-
-.product_pips_buttons-wrapper {
-    display: flex;
-    gap: 8px;
-}
-
-.product_pips_buttons {
-    background: unset;
-    border: none;
-    cursor: pointer;
-    width: 34px;
-    height: 34px;
-}
-
-.pips_button_decrement {
-    grid-row: 2;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='34' height='34' viewBox='0 0 34 34' fill='none'%3E%3Ccircle cx='17' cy='17' r='17' fill='white'/%3E%3Crect x='25' y='16' width='2' height='16' rx='1' transform='rotate(90 25 16)' fill='%2386869A'/%3E%3C/svg%3E");
-}
-
-.product_pips-value {
-    width: 63px;
-    text-align: center;
-    padding: 0;
-    border-radius: 30px;
-    background: #FFF;
-    color: #000;
-    font-size: 16px;
-    line-height: 140%;
-    border: none;
-}
-
-.pips_button_increment {
-    grid-row: 2;
-    background-image: url("data:image/svg+xml,%3Csvg width='34' height='34' viewBox='0 0 34 34' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='17' cy='17' r='17' fill='white'/%3E%3Crect x='16' y='9' width='2' height='16' rx='1' fill='%2386869A'/%3E%3Crect x='25' y='16' width='2' height='16' rx='1' transform='rotate(90 25 16)' fill='%2386869A'/%3E%3C/svg%3E%0A");
-}
-
-.order-product_price {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    font-family: Onest;
-    font-size: 35px;
-    line-height: 130%;
-}
-
-.order-product_button-order {
-    padding: 12px 37px 12px 38px;
-    border-radius: 30px;
-    background: #FF6E1D;
-    color: #FFF;
-    font-family: Onest;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 140%;
-    width: min-content;
-}
-
-.order-information {
-    margin-top: 60px;
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-}
-
-.order-information_header {
-    font-size: 28px;
-    line-height: 130%;
-}
-
-.order-information-text {
-    color: #86869A;
-    font-family: Manrope;
-    font-size: 20px;
-    line-height: 130%;
+.showcase_header {
+    margin-top: 120px;
 }
