--- a/order_products/order_products.css
+++ b/order_products/order_products.css
@@ -140,6 +140,33 @@ a {
     cursor: pointer;
 }
 
+.select_svg:before {
+    display: block;
+    content: '';
+    width: 18px;
+    height: 18px;
+}
+
+.select_color-grey:before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Ccircle cx='9' cy='9' r='9' fill='%23D9D9D9'/%3E%3C/svg%3E");
+}
+
+.select_color-white:before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Ccircle cx='9' cy='9' r='9' fill='white'/%3E%3C/svg%3E");
+}
+
+.select_color-pink:before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Ccircle cx='9' cy='9' r='9' fill='%23F8A1EA'/%3E%3C/svg%3E");
+}
+
+.select_color-brown:before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Ccircle cx='9' cy='9' r='9' fill='%239A6046'/%3E%3C/svg%3E");
+}
+
+.select_color-blue:before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Ccircle cx='9' cy='9' r='9' fill='%23333366'/%3E%3C/svg%3E");
+}
+
 .product_params-options {
     /*display: contents;*/
     /*width: 100%;*/
