--- a/machine_embroidery/machine_embroidery.css
+++ b/machine_embroidery/machine_embroidery.css
@@ -146,16 +146,64 @@ a {
 
 .for-price_row {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-columns: 1fr 1fr 3fr;
     justify-items: center;
-    border-bottom: solid 1px #CBCBDA;
+    border-top: solid 1px #CBCBDA;
 }
 
-.for-price_item {
-    width: 100%;
+.for-price_row-mini {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
+    width: 100%;
+}
+
+.for-price_col {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-right: solid 1px #CBCBDA;
+    align-items: center;
+    width: 100%;
+    padding-top: 22px;
+    padding-bottom: 22px;
+}
+
+.for-price_col-header {
+    padding-top: 0;
+}
+
+.for-price_header {
+    font-size: 20px;
+    line-height: 130%;
+}
+
+.response-data {
+    color: black;
+}
+
+.characteristic_hidden_line-active {
+    background: #F3F3F8;;
+}
+
+p[data-characteristic-col-text] {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    width: 100%;
+    text-align: center;
+}
+
+p[data-characteristic-col-text]:hover {
+    background: #E4E4F0;
+    border-radius: 20px;
+}
+
+.border-none {
+    border: none;
+}
+
+.padding-none {
+    padding: 0;
 }
 
 .footer {
