--- a/popup/popup.css
+++ b/popup/popup.css
@@ -132,3 +132,69 @@ a {
 .popup-button-right {
     justify-content: end;
 }
+
+
+.popup-city {
+    background: white;
+}
+
+.popup-city-item {
+    color: #A9A9C1;
+    border-bottom: solid 4px #EDEDF3;
+    border-radius: 2px;
+    font-size: 20px;
+    line-height: 130%;
+    padding-left: 16px;
+}
+
+.popup-city-item::placeholder {
+    color: #A9A9C1;
+}
+
+.selection_item-wrapper {
+    max-height: 186px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.selection_item-wrapper::-webkit-scrollbar {
+    background: #EDEDF3;
+    width: 6px;
+    border-radius: 50px;
+}
+
+.selection_item-wrapper::-webkit-scrollbar-thumb {
+    background: #CBCBDA;
+    border-radius: 50px;
+}
+
+.selection_item {
+    color: #A9A9C1;
+    font-size: 16px;
+    line-height: 140%;
+    padding-left: 16px;
+    cursor: pointer;
+}
+
+.selection_item .selection_item-header {
+    font-size: 20px;
+    line-height: 130%;
+}
+
+.selection_item-active {
+    color: black;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+    border-left: solid 4px #FF6E1D;
+    border-radius: 2px;
+}
+
+.selection_item-active .selection_item-header {
+    font-size: 20px;
+    line-height: 130%;
+}
