--- a/letter_to_director/letter_to_director.css
+++ b/letter_to_director/letter_to_director.css
@@ -79,3 +79,10 @@ a {
 .letter-to-director_button:hover {
     padding: 12px 25px 12px 26px;
 }
+
+
+@media (max-width: 786px) {
+    .map {
+        margin-top: 140px !important;
+    }
+}
