--- a/machine_embroidery/machine_embroidery_mobile.css
+++ b/machine_embroidery/machine_embroidery_mobile.css
@@ -1,12 +1,62 @@
-.showcase {
-    margin-top: 120px;
-}
-
-@media (max-width: 786px) {
+@media (max-width: 768px) {
 
     .container-width {
         max-width: 340px;
         width: 100%;
+    }
+
+    .machine-embroidery {
+        position: relative;
+        gap: 80px;
+    }
+
+    .machine-embroidery_top-block {
+        flex-direction: column;
+        margin-top: 40px;
+        gap: 0;
+    }
+
+    .machine-embroidery_header {
+        font-size: 24px;
+        position: absolute;
+        top: 0;
+    }
+
+    .machine-embroidery_description {
+        font-size: 16px;
+        line-height: 140%;
+    }
+
+    .machine-embroidery_img {
+        width: 340px;
+        height: 327px;
+        border-radius: 24px;
+    }
+
+    .machine-embroidery_price {
+        margin-top: 40px;
+        font-size: 28px;
+    }
+
+    .machine-embroidery_order-button {
+        padding: 10px 30px;
+        font-size: 14px;
+        font-weight: 500;
+        width: unset;
+        text-align: center;
+        margin-top: 16px;
+    }
+
+    .characteristic_menu-wrapper {
+        flex-wrap: wrap;
+        font-size: 20px;
+        gap: 12px;
+    }
+
+    .characteristic_hidden-item {
+        font-size: 16px;
+        line-height: 140%;
+        padding: 20px 16px 40px 16px;
     }
 
 
@@ -91,5 +141,49 @@
         max-width: inherit;
     }
 
+
+    .for-price_items-wrapper {
+        display: none;
+    }
+
+    .for-price_items-wrapper-mobile {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .for-price_row-mobile {
+        display: grid;
+        grid-template-columns: 1fr 1.4fr;
+        justify-items: center;
+        border-top: solid 1px #CBCBDA;
+    }
+
+    .for-price_row-mini-mobile {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-items: center;
+        width: 100%;
+    }
+
+    .for-price_col-mobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border-right: solid 1px #CBCBDA;
+        align-items: center;
+        width: 100%;
+        padding-top: 22px;
+        padding-bottom: 22px;
+    }
+
+    .for-price_row-mobile {
+        color: #000;
+        font-size: 16px;
+        line-height: 140%
+    }
+
+    .for-price_row-mini-mobile .for-price_col-mobile {
+        border: none;
+    }
 
 }
