--- a/popup/popup.css
+++ b/popup/popup.css
@@ -84,6 +84,9 @@ a {
     padding: 12px 23px;
     font-size: 16px;
     line-height: 140%;
+}
+
+.popup-input::placeholder {
     color: #A9A9C1;
 }
 
@@ -197,4 +200,64 @@ a {
 .selection_item-active .selection_item-header {
     font-size: 20px;
     line-height: 130%;
+}
+
+
+.popup-city-mini {
+    max-width: 300px;
+    width: 100%;
+    position: absolute;
+    display: inline-flex;
+    padding: 15px 20px 20px 20px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 22px;
+    border-radius: 24px;
+    background: white;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.10);
+}
+
+.popup-city-mini-row {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.popup-city-mini_header {
+    font-size: 16px;
+    line-height: 140%
+}
+
+.popup-city-mini_button-close {
+    cursor: pointer;
+    background: unset;
+    border: none;
+    display: block;
+    content: '';
+    width: 15px;
+    height: 15px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 15 15' fill='none'%3E%3Cpath d='M13.2333 1.5L7.5 7.36956L13.5 13.5' stroke='%23DDDDE7' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M1.76667 1.5L7.5 7.36956L1.5 13.5' stroke='%23DDDDE7' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+}
+
+.popup-city-mini-button {
+    display: flex;
+    padding: 11px 45px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    border: 1px solid #FF6E1D;
+    font-family: Onest;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 140%;
+}
+
+.popup-button-other {
+    color: #FF6E1D;
+}
+
+.popup-button-correct {
+    background: #FF6E1D;
+    color: white;
 }
