--- a/navigation/navigation.css
+++ b/navigation/navigation.css
@@ -12,9 +12,6 @@ a {
     color: unset;
 }
 
-li.navbar_item:first-child {
-    padding-right: 20px;
-}
 li.navbar_item:nth-last-child(2) {
     padding-left: 20px;
 }
@@ -31,17 +28,26 @@ li.navbar_item:nth-last-child(2) {
     margin-bottom: 40px;
 }
 
+.navbar_wrapper {
+    max-width: 1013px;
+    width: 100%;
+    display: flex;
+    gap: 31px;
+    border-radius: 78px;
+    background: #FFF;
+    padding: 10px 30px;
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
+}
+
 .navigation-toggle {
     display: none;
 }
 
 .navbar_wrapper-items {
     display: flex;
-    gap: 16px;
-    border-radius: 78px;
-    background: #FFF;
-    padding: 12px 30px;
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
+    gap: 12px;
+    padding: 0;
+    margin: 0;
 }
 
 .navbar_wrapper-logo {
@@ -55,6 +61,21 @@ li.navbar_item:nth-last-child(2) {
 .navbar_logo {
     width: 34px;
     height: 22px;
+}
+
+.navbar_select-city {
+    gap: 3px;
+    color: #808080;
+    font-size: 14px;
+    line-height: 140%;
+}
+
+.navbar_select-city:before {
+    display: block;
+    content: '';
+    width: 10px;
+    height: 14px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='14' viewBox='0 0 10 14' fill='none'%3E%3Cpath d='M6.23779 12.6838L6.23796 12.6839L6.24442 12.6714L8.87165 7.57528C8.89491 7.5345 8.91759 7.49332 8.93969 7.45174C9.30997 6.77876 9.5 5.92097 9.5 5.18568C9.5 2.61947 7.50642 0.5 5 0.5C2.49358 0.5 0.5 2.61947 0.5 5.18568C0.5 5.86916 0.64081 6.52012 0.894818 7.10761L0.898636 7.11645L0.902791 7.12512L1.04412 7.42028L1.04828 7.42897L1.05277 7.4375C1.079 7.48726 1.10608 7.53648 1.13399 7.58514L3.75556 12.6713L3.75539 12.6714L3.76221 12.6838C4.03085 13.1707 4.47485 13.5 5 13.5C5.52515 13.5 5.96915 13.1707 6.23779 12.6838ZM6.63333 5.18619C6.63333 6.16479 5.88087 6.91883 5 6.91883C4.11913 6.91883 3.36667 6.16479 3.36667 5.18619C3.36667 4.2076 4.11913 3.45356 5 3.45356C5.88087 3.45356 6.63333 4.2076 6.63333 5.18619Z' stroke='%23808080'/%3E%3C/svg%3E");
 }
 
 .navbar_item {
@@ -118,7 +139,7 @@ li.navbar_item:nth-last-child(2) {
     display: block;
 }
 
-.button-toggle:hover >.navbar_dropdown {
+.button-toggle:hover > .navbar_dropdown {
     display: block;
 }
 
@@ -159,11 +180,18 @@ li.navbar_item:nth-last-child(2) {
     font-weight: 600;
     line-height: 140%;
     white-space: nowrap;
+    max-width: 167px;
+    width: 100%;
 }
 
 .order-call:hover {
     padding: 12px 24px 12px 25px;
 }
+
+.navbar_wrapper:has( + .order-call:hover) {
+    padding: 10px 24px;
+}
+
 
 .link-orange {
     color: #E0562E;
