--- a/order_products/order_products_mobile.css
+++ b/order_products/order_products_mobile.css
@@ -5,7 +5,7 @@
     }
 
     .order-product_swiper-wrapper {
-        margin-top: 33px;
+        margin-top: 73px;
     }
 
     .order-product_swiper {
@@ -62,6 +62,12 @@
         line-height: 130%;
         position: absolute;
         top: 0;
+    }
+
+    .order-product_grade-wrapper {
+        position: absolute;
+        top: 0;
+        margin-top: 25px;
     }
 
     .order-product_params {
